Added pi sdl3_image

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,6 @@ add_library (gui ../../src/gui.h ../../src/gui.c)
 find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3)
 
 target_link_libraries(text LINK_PUBLIC SDL3::SDL3 utils)
-target_link_libraries(gui LINK_PUBLIC SDL3::SDL3 utils text)
+target_link_libraries(gui LINK_PUBLIC SDL3::SDL3 SDL3_image::SDL3_image SDL3_ttf::SDL3_ttf utils text)
 
 target_include_directories (gui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
