downgraded sdl3 versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 set(SDLTTF_VENDORED ON)
 
-add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
-add_subdirectory(vendored/SDL_ttf EXCLUDE_FROM_ALL)
-add_subdirectory(vendored/SDL_image EXCLUDE_FROM_ALL)
+add_subdirectory(vendored/SDL3-3.2.10 EXCLUDE_FROM_ALL)
+add_subdirectory(vendored/SDL3_ttf-3.2.2 EXCLUDE_FROM_ALL)
+add_subdirectory(vendored/SDL3_image-3.2.4 EXCLUDE_FROM_ALL)
 add_subdirectory(lib)
 add_subdirectory(bin)
 
